Minor edits, some comments

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -127,6 +127,8 @@ Sherbrooke, Canada\\
 
 %DG: I do understand Tomas' point about the following, but I really appreciate it ! Keep in mind the suggestion to drop the following paragraph was made when there was much more material above. Perhaps we should revisit this suggestion, given the actual material that will follow. To me this is fairly important for the non-technical people. There are some important things, such as the "the more sample the more zeros will appear in the interaction matrix"
 
+%AE: I agree with Dom here, as I think the paragraphs below are good for getting a bit deeper into the width of the problem we are addressing. Could possibly be shortened if needed?
+
   % [[Tomas suggests removing the following because it slows down procedings:]]
   % The basic information that we are collecting consists of matrices of interaction partners. Our count of interactions between two species reflects uncertainty with respect to whether two species are capable of interacting when co-occurring at a given site ($\lambda$), chance variation in whether the interaction is realised ($\chi$),  and uncertainty with respect to whether it is detected when realised ($\delta$). In this case, what can we do to pin down any of these different types of variation?
 
@@ -144,6 +146,9 @@ Sherbrooke, Canada\\
 
 
 \section*{A naive quantification of interaction probability and uncertainty}
+
+%%AE: I think the section that is commented  below not should be placed here, but when reading the pdf without this part in it I really thoght that this was missing. One option is to move this part to the Introduction, where it would fit better.
+
 
   % It is getting more and more common to represent interactions as probabilities in theoretical models of network structure. For example, the minimum potential model introduces gaps in the feeding niche of predators by sampling based on the likelihood of each interaction~\citep{Allesina2008}, while a gaussian probability function is used to represent the niche by~\citet{Williams2010}. \citet{Eklof2013} also introduced variability  in the computation of network dimensions, allowing the absence of interactions within the n-dimension niche of every species. Empirical investigation of trait-matching constraints often consider the occurrence of interactions as binomial process (e.g.,~\citealp{Rohr2016}). There are also ways to perform analysis of probabilistic networks, with almost all metrics having a probabilistic version~\citep{Poisot2016}. But there is not yet consensus on what an interaction probability between a pair of species means, and this is definitely a problem when comes time to estimate the uncertainty of both pairwise interactions and entire networks. 
 
@@ -214,7 +219,8 @@ Sherbrooke, Canada\\
 
     \subsection*{Moments and other properties}
 
-      The fact that the posterior distribution of $\lambda$ follows a beta distribution makes it straightforward to compute moments and other properties. These moments may then be used when calculating higher-order network properties.
+      It is common to preform analyses that require calculating higher-order network properties in interaction networks. The fact that the posterior distribution of $\lambda$ follows a beta distribution makes it straightforward to compute moments and other properties neede for this. 
+%%AE: Should we give examples of these higher-order properties?     
 
       The \textbf{average} of $\lambda$ is: 
           \begin{equation}
@@ -409,13 +415,14 @@ Sherbrooke, Canada\\
     We find, perhaps not surprisingly, that the posterior webs for the Salix-galler network all had much higher connectance than the original, observed web (C=0.028 for the observed web and 0.528$\leq$C$\leq$0.568 for the posterior webs; Fig.~\ref{posterior_webs}A). Likewise, the number of links per \emph{Salix} and galler species in the observed web ($L_{\emph{Salix}}$=2.71 and $L_{galler}$=1.47, respectively) were much lower than those predicted in the posterior webs (27.4$\leq L_{\emph{Salix}} \leq$29.5 and 50.6$\leq L_{galler} \leq $54.5, respectively; Fig.~\ref{posterior_webs}C,E), even when filtering with a detection probability of only 50\%. There are two possible explanations for this discrepancy: either the data of~\citet{Barbour2016} is simply too different from that of~\citet{Kopelke2017} to offer an appropriate prior for our dataset, or the true detection probability for links between \emph{Salix} and galler species is much less than 50\%. As the scale of the two datasets is quite different (genotypes of a single \emph{Salix} species in~\citet{Barbour2016}, various \emph{Salix} species in our dataset), we suspect the former is more likely.
 %    [[This is a little boring. Tomas has ideas for people with potentially better priors - may require another co-author. Also maybe could use one site as a prior like ``training data"?]]
 % DG: not so sure, I find it very useful because it simply illustrates the point. Nestedness will be a nice complement with lest trivial results
+%%AE: If we are doing a complement here (I agree it is a bit boring) I think option c) from Alyssas mail is the most straight forward option. 
 
     Considering the galler-natural enemy networks, the connectance, mean links per galler, and mean links per natural enemy were also much lower in the observed web (C=0.078, $L_{galler}$=9.99, and $L_{natural enemy}$=7.45, respectively) than in the posterior webs (0.183$\leq$ C $\leq$ 0.196, 17.5 $\leq L_{galler} \leq$ 18.9, and 23.0 $\leq L_{natural enemy} \leq$ 24.8). When the detection probability was relatively low (i.e., 50\%), however, the properties of randomised networks became similar to those in the observed webs (Fig.~\ref{posterior_webs}B,D,F). The~\citet{Barbour2016} network likely provides a better prior here than for the \emph{Salix}-galler networks, as both networks included different galler and natural enemy species. Although the two networks differ vastly in scale, and the inclusion of multiple \emph{Salix} species likely causes structural differences from~\citet{Barbour2016} despite the similar resolution of gallers and natural enemies, this result nevertheless suggests that even such a large and well-replicated network as that in~\citet{Kopelke2017} is missing many interactions. This should be a strong warning to researchers comparing structural characteristics between networks - small structural differences are likely to be masked by substantial noise resulting from sampling uncertainty.
 
 
 \section*{Conclusions/recommendations}
 
-  Real interaction networks vary~\citep{Kitching1987,Olesen2011a,Pires2011a,Baiser2012,Fodrie2015,Novak2015}, and to capture this variation we must turn from static descriptions of network structure to probabilistic descriptions. In this study, we have developed the analytical tools to capture the uncertainty in the estimation of pairwise interactions, and to partition it into its individual components: interaction uncertainty, process uncertainty and detection uncertainty. The patters unveiled offer tangible recommendations for improved descriptors of ecological interactions. First, our analyses point to detection uncertainty as a major contributor to overall uncertainty of is establishing the absence of interaction. To counter these establish the true absence of interactions will then require comparatively large sample size – on the order of 30-50 observations per species pair. Second, where such extensive sampling is not feasible, researchers should still acknowledge the varying levels of confidence surrounding the presence or absence of interactions between different pairs of species. Including the $n$ and $k$ values for each interaction will clearly indicate which unobserved interactions are most likely to be observed with further sampling and which estimates are more reliable. Third, the uncertainty around interactions (especially interactions that were not observed) should be incorporated in calculations of network properties like connectance or nestedness. Re-sampling networks based on a probabilistic understanding of networks is straightforward and gives distributions for network properties rather than point estimates. This not only acknowledges the fact that interactions vary over time and space but will also facilitate comparisons between networks. With confidence intervals around network metrics, we can not only say that one network is more connected than another but also whether the networks are more different than we would expect based on imperfect sampling of interactions. To facilitate these recommendations, we provide all code used in this paper in the supplementary material. 
+  Real interaction networks vary over several dimensions~\citep{Kitching1987,Olesen2011a,Pires2011a,Baiser2012,Fodrie2015,Novak2015}, and to capture this variation we must turn from static descriptions of network structure to probabilistic descriptions. In this study, we have developed the analytical tools to capture the uncertainty in the estimation of pairwise interactions, and to partition it into its individual components: interaction uncertainty, process uncertainty and detection uncertainty. The patters unveiled offer tangible recommendations for improved descriptors of ecological interactions. First, our analyses point to detection uncertainty as a major contributor to overall uncertainty of is establishing the absence of interaction. To counter these establish the true absence of interactions will then require comparatively large sample size – on the order of 30-50 observations per species pair. Second, where such extensive sampling is not feasible, researchers should still acknowledge the varying levels of confidence surrounding the presence or absence of interactions between different pairs of species. Including the $n$ and $k$ values for each interaction will clearly indicate which unobserved interactions are most likely to be observed with further sampling and which estimates are more reliable. Third, the uncertainty around interactions (especially interactions that were not observed) should be incorporated in calculations of network properties like connectance or nestedness. Re-sampling networks based on a probabilistic understanding of networks is straightforward and gives distributions for network properties rather than point estimates. This not only acknowledges the fact that interactions vary over time and space but will also facilitate comparisons between networks. With confidence intervals around network metrics, we can not only say that one network is more connected than another but also whether the networks are more different than we would expect based on imperfect sampling of interactions. To facilitate these recommendations, we provide all code used in this paper in the supplementary material. 
 
 
 
@@ -434,7 +441,7 @@ Sherbrooke, Canada\\
   \label{box1}
 \end{floatbox}
 
-
+%%AE: I think Box 2 is nice to have in as a hands-on example.
 \begin{floatbox}{}
   
   Here we describe the derivation of the Clopper-Pearson credible interval for the estimated probability of interaction $\lambda$ of a pair of species observed co-occurring $n$ times and interacting $k$ times. As we are most interested in the probability of interaction between species pairs that have never been observed co-occurring, we consider only the case where $k=0$ over a variety of $n$. This is straightforward to do in R (see the function ``credible\_interval" in \emph{Appendix S1}). 
