--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -43,18 +43,17 @@
 
 % DG : if ok with all of you, I would appreciate being last author
 
-\author{Alyssa R. Cirtwill$^{1}$, Dominique Gravel$^{2}$, \&  Anna Ekl\"{o}f$^{1}$, Tomas Roslin$^{x,y}$, Kate Wootton$^{x}$}
+\author{Alyssa R. Cirtwill$^{1}$, Dominique Gravel$^{2}$, \&  Anna Ekl\"{o}f$^{1}$, Tomas Roslin$^{3,4}$, Kate Wootton$^{3}$}
 \date{\small$^1$Department of Physics, Chemistry\\ 
 and Biology (IFM)\\ 
 Link\"{o}ping University\\
 Link\"{o}ping, Sweden\\
-
-\small$^2$ Département de biologie\\ 
-Université de Sherbrooke\\ 
+\medskip
+$^2$ D\'{e}partement de biologie\\ 
+Universit\'{e} de Sherbrooke\\ 
 Sherbrooke, Canada\\ 
-
-\medskip $^x$ Department of Ecology\\ P.O. Box 7044, Swedish University of Agricultural Sciences \\ SE-750 07 Uppsala, Sweden \\
-\medskip $^y$ Spatial Foodweb Ecology Group\\ Department of Agricultural Sciences \\ PO Box 27 (Latokartanonkaari 5)\\ FI-00014 University of Helsinki, Finland \\
+\medskip $^3$ Department of Ecology\\ P.O. Box 7044, Swedish University of Agricultural Sciences \\ SE-750 07 Uppsala, Sweden \\
+\medskip $^4$ Spatial Foodweb Ecology Group\\ Department of Agricultural Sciences \\ PO Box 27 (Latokartanonkaari 5)\\ FI-00014 University of Helsinki, Finland \\
 % \medskip
 % $^\dagger$ Corresponding author:\\
 % alyssa.cirtwill@gmail.com\\
