new priors based on a couple of sample subwebs

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -444,7 +444,7 @@ Sherbrooke, Canada\\
   Here we describe the derivation of the Clopper-Pearson credible interval for the estimated probability of interaction $\lambda$ of a pair of species observed co-occurring $n$ times and interacting $k$ times. As we are most interested in the probability of interaction between species pairs that have never been observed co-occurring, we consider only the case where $k=0$ over a variety of $n$. This is straightforward to do in R (see the function ``credible\_interval" in \emph{Appendix S1}). 
 
 
-  First, we must obtain the $\alpha$ and $\beta$ parameters for the prior distribution. In this study we obtained these parameters using the R~\citep{R} function fitdispr from the package MASS~\citep{MASS}. Once $\alpha$ and $\beta$ are known, we can update them using our observed data. Specifically, we are interested in $\alpha'=\alpha+k$ and $\beta'=\beta+n-k$. These parameters can then be used to calculate a credible interval using the R~\citep{R} function qbeta. In the table below, we present the 95\% credible intervals for \emph{Salix}-galler and galler-natural enemy paris with different numbers of observed co-occurrences ($n$) and no observed interactions ($k=0$). Both sets of intervals rely on prior information from the network in~\citet{Barbour2016,Barbour2016Dryad}.
+  First, we must obtain the $\alpha$ and $\beta$ parameters for the prior distribution. In this study we obtained these parameters using the R~\citep{R} function fitdist from the package fitdistrplus~\citep{fitdistrplus}. Once $\alpha$ and $\beta$ are known, we can update them using our observed data. Specifically, we are interested in $\alpha'=\alpha+k$ and $\beta'=\beta+n-k$. These parameters can then be used to calculate a credible interval using the R~\citep{R} function qbeta. In the table below, we present the 95\% credible intervals for \emph{Salix}-galler and galler-natural enemy paris with different numbers of observed co-occurrences ($n$) and no observed interactions ($k=0$). Both sets of intervals rely on prior information from the network in~\citet{Barbour2016,Barbour2016Dryad}.
 
       % # R code to make the table:
       % output=matrix(nrow=length(ns),ncol=5)
