adding the first rounds of results for the other priors

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -335,18 +335,18 @@ Sherbrooke, Canada\\
 
   \subsection*{Computing the posterior distribution}
 
-      In a strict Bayesian framework, we wish to use a prior distribution that does not rely on any information from the study at hand. To that end, we use data from another well-described system of \emph{Salix}, gallers, and natural enemies~\citep{Barbour2016,Barbour2016Dryad}. We note that this study used several genotypes of \emph{Salix hookeriana} rather than different \emph{Salix} species, but stress that this difference is unlikely to be critical for our purposes. Our interest is specifically in what information can be gained from the extensive sampling of \emph{Salix}, gallers, and natural enemies across Europe; the similar but much smaller system in the United States is merely a starting point from which to obtain somewhat reasonable priors. To obtain these priors, we estimated frequencies of  \emph{S. hookeriana} genotype-galler interactions based on the normalised degree of each species in each network component (see \emph{Appendix S3} for details and code). Specifically, we obtain prior parameters $\alpha$=2.51 and $\beta$=1.89. For the galler-natural enemy component of the network, the corresponding prior parameters are $\alpha$=1.34, $\beta$=9.49. We are then able to use these prior parameters to estimate the posterior distribution of interaction probabilities given the additional information in our dataset.
+      In a strict Bayesian framework, we wish to use a prior distribution that does not rely on any information from the study at hand. To that end, we use data from another well-described system of \emph{Salix}, gallers, and natural enemies~\citep{Barbour2016,Barbour2016Dryad}. We note that this study used several genotypes of \emph{Salix hookeriana} rather than different \emph{Salix} species, but stress that this difference is unlikely to be critical for our purposes. Our interest is specifically in what information can be gained from the extensive sampling of \emph{Salix}, gallers, and natural enemies across Europe; the similar but much smaller system in the United States is merely a starting point from which to obtain somewhat reasonable priors. As the \emph{Salix}-galler component of~\citet{Barbour2016}'s study is quite different from that in~\citet{Kopelke2017}, we repeated our analyses using two subnetworks from the middle of the geographical distribution of the~\citet{Kopelke2017} dataset (Zillis and Zillertal sites) as priors. This is analogous to using the first sample as ``training data" with which to guide future sampling. To obtain the priors based on~\citet{Barbour2016}, we estimated frequencies of  \emph{S. hookeriana} genotype-galler interactions based on the normalised degree of each node (species or genotype) in each network component (see \emph{Appendix S3} for details and code). Specifically, we obtained prior parameters $\alpha$=2.51 and $\beta$=1.89. For the galler-natural enemy component of the network, the corresponding prior parameters were $\alpha$=1.34, $\beta$=9.49. We followed the same procedure to obtain priors based on~\citet{Kopelke2017} except that we used the normalised degree of each species in each network component. For the \emph{Salix}-galler component of the network, we obtained prior parameters of $\alpha$=8.72, $\beta$=305 and $\alpha$=6.73, $\beta$=101 for the Zillis and Zillertal subwebs, respectively. For the galler-natural enemy component, we obtained prior parameters of $\alpha$=0.700, $\beta$=8.49 and $\alpha$=1.64, $\beta$=11.2 for the Zillis and Zillertal subwebs, respectively. Note that the priors obtained for the \emph{Salix}-galler component of the network differ greatly depending on whether data from~\citet{Barbour2016} or~\citet{Kopelke2017} were used while priors for the galler-natural enemy component were relatively similar. After calculating these prior parameters, we were then able to estimate the posterior distribution of interaction probabilities given the additional information in our dataset.
   
 
-      For species where no co-occurrences were observed ($n=0$), we can calculate the estimates for the mean and variance of $\lambda_{ij}$ directly from the prior parameters following equations~\ref{mean} and~\ref{variance} (see \emph{Appendix S1} for R implementation). For the \emph{Salix}-galler network, the prior distribution we obtained was: $\bar\lambda$=0.570, var($\lambda$)=0.056. The prior distribution for the galler-natural enemy network was $\bar\lambda$=0.124, var($\lambda$)=0.010. This is consistent with the prior data, where the average interaction probability based on the degree distributions of \emph{Salix} genotypes and gallers was 0.562 and that for gallers and natural enemies was 0.122. These probabilities are much higher than those in our dataset (0.028 and 0.078 for the \emph{Salix}-galler and galler-natural enemy networks, respectively) - a discrepancy which may reflect the differences in scale between the network containing different genotypes of a single \emph{Salix} species and four gallers from a single family in~\citet{Barbour2016} and the extensive network of~\citet{Kopelke2017} which contains tens of \emph{Salix}, galler, and natural enemy species, with the insects representing many different families.
+      For species where no co-occurrences were observed ($n=0$), we can calculate the estimates for the mean and variance of $\lambda_{ij}$ directly from the prior parameters following equations~\ref{mean} and~\ref{variance} (see \emph{Appendix S1} for R implementation). For the \emph{Salix}-galler network, the prior distribution we obtained based on~\citet{Barbour2016} was: $\bar\lambda$=0.570, var($\lambda$)=0.056. The prior distributions based on~\citet{Kopelke2017} were $\bar\lambda$=0.028, var($\lambda$)=8.60$\times$10$^{-5}$ and $\bar\lambda$=0.062, var($\lambda$)=5.43$\times$10$^{-4}$ for the Zillis and Zillertal subwebs, respectively. The prior distribution for the galler-natural enemy network based on~\citet{Barbour2016} was $\bar\lambda$=0.124, var($\lambda$)=0.010. Prior distributions based on~\citet{Kopelke2017} were $\bar\lambda$=0.076, var($\lambda$)=0.008 and $\bar\lambda$=0.127, var($\lambda$)=0.009 for the Zillis and Zillertal subwebs, respectively. The posterior interaction probabilities obtained based on~\citet{Barbour206} are much higher than those obtained based on~\citet{Kopelke2017}, especially for the \emph{Salix}-galler component of the network. This likely reflects the differences in scale between the network containing different genotypes of a single \emph{Salix} species and four gallers from a single family in~\citet{Barbour2016} and the more extensive networks in~\citet{Kopelke2017}. The prior distributions calculated from subwebs in~\citet{Kopelke2017} are more likely to reflect the sparsely-connected meta-network than is a distribution calculated from the smaller and denser network in~\citet{Barbour2016}. This emphasises the importance of using an appropriate study system when constructing a prior.
 
 
-      For a pair of species with some observed co-occurrences ($n>0$), we can update the prior distribution with these data. If we consider only pairs of species which were observed to co-occur but not to interact, $k_{ij}$ is always 0 and only $n_{ij}$ will vary between species pairs, giving $\alpha'$=$\alpha$ and $\beta'$=$\beta + n_{ij}$. As the most extreme case, for a pair of species which co-occurred at all 374 sites and was never observed to interact, our distributions would become 
+      For a pair of species with some observed co-occurrences ($n>0$), we can update the prior distribution with these data. If we consider only pairs of species which were observed to co-occur but not to interact, $k_{ij}$ is always 0 and only $n_{ij}$ will vary between species pairs, giving $\alpha'$=$\alpha$ and $\beta'$=$\beta + n_{ij}$. As the most extreme case, consider a pair of species which co-occurred at all 374 sites and was never observed to interact. Using the prior derived from~\citet{Barbour2016}, our distributions would become 
       $\bar\lambda_{ij}$=6.63 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=1.74 $\times$ 10$^{-5}$ for the \emph{Salix}-galler network and 
-      $\bar\lambda_{ij}$=3.49 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=9.03 $\times$ 10$^{-6}$ for the galler-natural enemy network. Both distributions are very close to 0 with small variance about our estimate of $\lambda$; species $i$ and $j$ are extremely unlikely to interact at sites or times not included in our sample.
+      $\bar\lambda_{ij}$=3.49 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=9.03 $\times$ 10$^{-6}$ for the galler-natural enemy network. Using the priors derived from~\citet{Kopelke2017}, our distributions for the \emph{Salix}-galler network would become $\bar\lambda_{ij}$=1.27 $\times$ 10$^{-2}$, var($\lambda_{ij}$)=1.82 $\times$ 10$^{-5}$ and $\bar\lambda_{ij}$=1.40 $\times$ 10$^{-2}$, var($\lambda_{ij}$)=2.86 $\times$ 10$^{-5}$ for the Zillis and Zillertal subwebs, respectively. Our distributions for the galler-natural enemy network would become $\bar\lambda_{ij}$=1.83 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=4.76 $\times$ 10$^{-6}$ and $\bar\lambda_{ij}$=4.23 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=1.09 $\times$ 10$^{-5}$ for the Zillis and Zillertal subwebs. Distributions for both network components were very close to 0 with small variance about our estimate of $\lambda$; species $i$ and $j$ are extremely unlikely to interact at sites or times not included in our sample.
 
 
-      For most pairs of species $i$ and $j$, however, $n_{ij}$ was much less than 374 and our posterior mean and variance therefore retain more of the influence of the prior. We can see this in the increasing means and variances as we decrease $n_{ij}$ (Fig.~\ref{Salix_pdfs}). The 95\% credible interval around the estimate of $\lambda$ also widens as $n_{ij}$ decreases, from (0.001, 0.017) and (\textless0.001, 0.11) for hypothetical \emph{Salix}-galler and galler-natural enemy pairs that might be observed co-occurring at all 374 sites without any observed interaction to (0.152,0.931) and (0.008, 0.364) for \emph{Salix}-galler and galler-natural enemy pairs that were never observed co-occurring.
+      For most pairs of species $i$ and $j$, however, $n_{ij}$ was much less than 374 and our posterior mean and variance therefore retain more of the influence of the prior. We can see this in the increasing means and variances as we decrease $n_{ij}$ (Fig.~\ref{Salix_pdfs}). Using the priors derived from~\citet{Barbour2016}, the 95\% credible interval around the estimate of $\lambda$ also widens as $n_{ij}$ decreases from (0.001, 0.017) and (\textless0.001, 0.11) for hypothetical \emph{Salix}-galler and galler-natural enemy pairs that might be observed co-occurring at all 374 sites without any observed interaction to (0.152,0.931) and (0.008, 0.364) for \emph{Salix}-galler and galler-natural enemy pairs that were never observed co-occurring. The priors derived from~\citet{Kopelke} gave intervals that were closer to 0, widening from (0.006, 0.022) and (0.006, 0.026) to (0.013, 0.049) and (0.025, 0.115) for the \emph{Salix}-galler network and widening from (0.00001, 0.008) and (0.0004, 0.013) to (0.0005, 0.304) and (0.012, 0.348) for the galler-natural enemy network.
 
 % %DG: the following subsection could be moved to the appendix if we need to cut down
 % Add to appendix. 
