--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -42,21 +42,24 @@
 \title{A quantitative framework for investigating the reliability of network construction}
 
 % DG : if ok with all of you, I would appreciate being last author
+% AC : Makes sense to me since Dom was the originator of this ms and laid a lot of the groundwork.
 
-\author{Alyssa R. Cirtwill$^{1}$, Dominique Gravel$^{2}$, \&  Anna Ekl\"{o}f$^{1}$, Tomas Roslin$^{3,4}$, Kate Wootton$^{3}$}
+% AC : Assuming I'm going to be corresponding author on this but happy to let anyone else step in if you're eager
+
+\author{Alyssa R. Cirtwill$^{1\dagger}$, \&  Anna Ekl\"{o}f$^{1}$, Tomas Roslin$^{2,3}$, Kate Wootton$^{2}$, Dominique Gravel$^{4}$}
 \date{\small$^1$Department of Physics, Chemistry\\ 
 and Biology (IFM)\\ 
 Link\"{o}ping University\\
 Link\"{o}ping, Sweden\\
-\medskip$^2$ D\'{e}partement de biologie\\ 
+\medskip $^2$ Department of Ecology\\ P.O. Box 7044, Swedish University of Agricultural Sciences \\ SE-750 07 Uppsala, Sweden \\
+\medskip $^3$ Spatial Foodweb Ecology Group\\ Department of Agricultural Sciences \\ PO Box 27 (Latokartanonkaari 5)\\ FI-00014 University of Helsinki, Finland \\
+\medskip$^4$ D\'{e}partement de biologie\\ 
 Universit\'{e} de Sherbrooke\\ 
 Sherbrooke, Canada\\ 
-\medskip $^3$ Department of Ecology\\ P.O. Box 7044, Swedish University of Agricultural Sciences \\ SE-750 07 Uppsala, Sweden \\
-\medskip $^4$ Spatial Foodweb Ecology Group\\ Department of Agricultural Sciences \\ PO Box 27 (Latokartanonkaari 5)\\ FI-00014 University of Helsinki, Finland \\
-% \medskip
-% $^\dagger$ Corresponding author:\\
-% alyssa.cirtwill@gmail.com\\
-% +46 723 158464\\
+\medskip
+$^\dagger$ Corresponding author:\\
+alyssa.cirtwill@gmail.com\\
++46 723 158464\\
 }
 
 \renewcommand\Authands{ and }
@@ -100,11 +103,8 @@ Sherbrooke, Canada\\
     \subsection*{Interaction uncertainty} 
 
     First, and most fundamentally, we do not know whether or not a pair of species have the appropriate characteristics (or traits) to interact. We define the probability of an interaction $L$ given those characteristics $\mathbf{T}$ as $P(L | \mathbf{T})=\lambda$. Obviously, if $k$ (the number of observed interactions) is 0, it is possible that the two species could not interact even if there were no external constraints (e.g., temporal or environmental separation) preventing the interaction from occurring. As a simple example, a prey species may be too large to be consumed by a particular predator. In such cases, $\lambda$ would take a value of 0 and there would be no uncertainty. 
-    % [[The previous sentence doesn't follow, k hasn't been defined and we don't know that it's zero. Also, are we assuming that these interactions have been observed over a large area/time like the Kopelke data? Otherwise couldn't something about that particular site prevent species interacting even if they otherwise could?]] 
-    % [[With defining k I think this is fine... site uncertainty will come in later, and it's not necessary to assume anything about the sampling design to get from not observing two species to interact to suspecting that they don't (degree of confidence depending on the species involved). I've toned down "very likely" to "possible" though - does that help?]]
     Nevertheless, it is also possible that the interaction is a rare phenomenon with $\lambda>0$ that has not yet been documented. This source of uncertainty is the one documented by trait-matching models~\citep{Bartomeus2016}. It arises because every model is imperfect and lacks information (i.e. about traits) that could be used to define constraints on the interaction. In other words, with sufficient sampling and all information accessible, this interaction probability $\lambda$ should either tend to 0 or to 1 and the uncertainty should vanish. 
-    % [[For species which actually co occur (?)]]
-    % [[I think that gets covered under "sufficient sampling"]]
+
 
     \subsection*{Process uncertainty} 
 
@@ -127,20 +127,17 @@ Sherbrooke, Canada\\
 
 %AE: I agree with Dom here, as I think the paragraphs below are good for getting a bit deeper into the width of the problem we are addressing. Could possibly be shortened if needed?
 
-  % [[Tomas suggests removing the following because it slows down procedings:]]
-  % The basic information that we are collecting consists of matrices of interaction partners. Our count of interactions between two species reflects uncertainty with respect to whether two species are capable of interacting when co-occurring at a given site ($\lambda$), chance variation in whether the interaction is realised ($\chi$),  and uncertainty with respect to whether it is detected when realised ($\delta$). In this case, what can we do to pin down any of these different types of variation?
+  [[Tomas suggests removing the following because it slows down procedings, Anna and Dom want it back. Shortening sounds like a good middle ground:]]
+  The basic information that we are collecting consists of matrices of interaction partners. Our count of interactions between two species reflects uncertainty with respect to whether two species are capable of interacting when co-occurring at a given site ($\lambda$), chance variation in whether the interaction is realised ($\chi$),  and uncertainty with respect to whether it is detected when realised ($\delta$). In this case, what can we do to pin down any of these different types of variation?
 
 
-  % The obvious rule of thumb is to ``sample more" (see Fig.~\ref{upper_limits} for a demonstration of the power of increasing sample size), but we note that there are limits to the utility of this motto. Sampling more will clearly reduce uncertainty regarding the upper bound of the probability of interaction, and it will also increase the probability of detecting unlikely interactions (i.e. interactions occurring with a low probability). Yet, since the probability of observing the co-occurrence of two species will always be higher than the probability of observing their interaction (since the probability of interaction is conditional on both interaction partners being present; see Fig.~\ref{histograms}E-F), we will accumulate observations of co-occurrences faster than we will accumulate observations of interactions. Thus, the more we sample, the more zeros will appear in our interaction matrix, which may seem like a counter-intuitive outcome. 
+  The obvious rule of thumb is to ``sample more" (see Fig.~\ref{upper_limits} for a demonstration of the power of increasing sample size), but we note that there are limits to the utility of this motto. Sampling more will clearly reduce uncertainty regarding the upper bound of the probability of interaction, and it will also increase the probability of detecting unlikely interactions (i.e. interactions occurring with a low probability). Yet, since the probability of observing the co-occurrence of two species will always be higher than the probability of observing their interaction (since the probability of interaction is conditional on both interaction partners being present; see Fig.~\ref{histograms}E-F), we will accumulate observations of co-occurrences faster than we will accumulate observations of interactions. Thus, the more we sample, the more zeros will appear in our interaction matrix, which may seem like a counter-intuitive outcome. 
 
 
-  % As a solution towards deciding whether unobserved interactions were undetected due to sampling, or whether they truly do not occur,~\citet{Weinstein2017} used repeated sampling rounds to estimate the daily probability of detecting a hummingbird interaction, and to thereby model the observation and process mechanisms. While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (e.g., associations between hosts and parasitoids with a single generation per year), or very rare interactions which might not occur on any of the sampling days or might involve individuals of a species that are not under observation. What is worse, the problem persists that if a given interaction is not observed on a given day, this could be either because it was impossible that day despite being otherwise feasible [$P(X|D=1,L=1)=0$], because interaction between the two did occur but could not be observed [$P(D|X=1,L=1)=0$], or from any combination of the two. From a conceptual perspective, this approach will thus fail to satisfactorily distinguish between sources of uncertainty. Most importantly, if two species are never observed co-occurring during several days of sampling then we have learned nothing about their probability of interacting if they should ever co-occur. In other words, there is no information about interactions without co-occurrence.
+  As a solution towards deciding whether unobserved interactions were undetected due to sampling, or whether they truly do not occur,~\citet{Weinstein2017} used repeated sampling rounds to estimate the daily probability of detecting a hummingbird interaction, and to thereby model the observation and process mechanisms. While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (e.g., associations between hosts and parasitoids with a single generation per year), or very rare interactions which might not occur on any of the sampling days or might involve individuals of a species that are not under observation. What is worse, the problem persists that if a given interaction is not observed on a given day, this could be either because it was impossible that day despite being otherwise feasible [$P(X|D=1,L=1)=0$], because interaction between the two did occur but could not be observed [$P(D|X=1,L=1)=0$], or from any combination of the two. From a conceptual perspective, this approach will thus fail to satisfactorily distinguish between sources of uncertainty. Most importantly, if two species are never observed co-occurring during several days of sampling then we have learned nothing about their probability of interacting if they should ever co-occur. In other words, there is no information about interactions without co-occurrence.
 
 
-  % An added complication is that not all sources of uncertainty are proportional to sample size. To record an interaction between A and B, we need to identify both partners correctly (a non-trivial problem in many food webs; e.g.~\citealp{Kaartinen2011,Roslin2016}) and be able to resolve all interactions with a similar likelihood. For both molecular and rearing techniques, certain types of interactions may go unnoticed due to technical challenges~\citep{Wirta2014}. This can bias the set of recorded interactions. The bottom line is that separating different sources of uncertainty is difficult indeed. As an alternative to abandoning empirical networks or continuing to ignore the uncertainty inherent in undetected observations, we propose that some insight regarding the detectability of interactions between species not found co-occurring may be gained from data on other species between which interactions are known to be feasible. 
-
-  % [[How do we define samples? For the Kopelke set we use sampling occasion, but what about sampling twice as many trees on the same day and same place? Does that count? Does it have to be spatially and/or temporally separated? Is it relevant??]]
-  % [[Pretty sure this will always depend on the study - also seems like a pretty large digression.]]
+  An added complication is that not all sources of uncertainty are proportional to sample size. To record an interaction between A and B, we need to identify both partners correctly (a non-trivial problem in many food webs; e.g.~\citealp{Kaartinen2011,Roslin2016}) and be able to resolve all interactions with a similar likelihood. For both molecular and rearing techniques, certain types of interactions may go unnoticed due to technical challenges~\citep{Wirta2014}. This can bias the set of recorded interactions. The bottom line is that separating different sources of uncertainty is difficult indeed. As an alternative to abandoning empirical networks or continuing to ignore the uncertainty inherent in undetected observations, we propose that some insight regarding the detectability of interactions between species not found co-occurring may be gained from data on other species between which interactions are known to be feasible. 
 
 
 \section*{A naive quantification of interaction probability and uncertainty}
@@ -148,7 +145,7 @@ Sherbrooke, Canada\\
 %%AE: I think the section that is commented  below not should be placed here, but when reading the pdf without this part in it I really thoght that this was missing. One option is to move this part to the Introduction, where it would fit better.
 
 
-  % It is getting more and more common to represent interactions as probabilities in theoretical models of network structure. For example, the minimum potential model introduces gaps in the feeding niche of predators by sampling based on the likelihood of each interaction~\citep{Allesina2008}, while a gaussian probability function is used to represent the niche by~\citet{Williams2010}. \citet{Eklof2013} also introduced variability  in the computation of network dimensions, allowing the absence of interactions within the n-dimension niche of every species. Empirical investigation of trait-matching constraints often consider the occurrence of interactions as binomial process (e.g.,~\citealp{Rohr2016}). There are also ways to perform analysis of probabilistic networks, with almost all metrics having a probabilistic version~\citep{Poisot2016}. But there is not yet consensus on what an interaction probability between a pair of species means, and this is definitely a problem when comes time to estimate the uncertainty of both pairwise interactions and entire networks. 
+   [[Move this paragraph to intro?]] It is getting more and more common to represent interactions as probabilities in theoretical models of network structure. For example, the minimum potential model introduces gaps in the feeding niche of predators by sampling based on the likelihood of each interaction~\citep{Allesina2008}, while a gaussian probability function is used to represent the niche by~\citet{Williams2010}. \citet{Eklof2013} also introduced variability  in the computation of network dimensions, allowing the absence of interactions within the n-dimension niche of every species. Empirical investigation of trait-matching constraints often consider the occurrence of interactions as binomial process (e.g.,~\citealp{Rohr2016}). There are also ways to perform analysis of probabilistic networks, with almost all metrics having a probabilistic version~\citep{Poisot2016}. But there is not yet consensus on what an interaction probability between a pair of species means, and this is definitely a problem when comes time to estimate the uncertainty of both pairwise interactions and entire networks. 
 
 
   To progressively dissect the different contributions to uncertainty, we will start by considering how we could naively quantify interaction probability and its associated uncertainty \emph{for an interaction that has not yet been observed}. We consider the case where a pair of species have been observed co-occurring $n$ times, of which they have been observed to interact in $k = 0$ cases. We now aim to evaluate the uncertainty of this interaction. We consider the occurrence of an interaction as a Bernoulli trial. Consequently, the number of successes $k$ over $n$ trials will follow a binomial distribution: 
@@ -216,8 +213,9 @@ Sherbrooke, Canada\\
 
     \subsection*{Moments and other properties}
 
-      It is common to preform analyses that require calculating higher-order network properties in interaction networks. The fact that the posterior distribution of $\lambda$ follows a beta distribution makes it straightforward to compute moments and other properties neede for this. 
-%%AE: Should we give examples of these higher-order properties?     
+      It is common to preform analyses that require calculating higher-order network properties in interaction networks. The fact that the posterior distribution of $\lambda$ follows a beta distribution makes it straightforward to compute moments and other properties needed for this. 
+%%AE: Should we give examples of these higher-order properties?    
+% AC: How do you mean? Examples of averages/variances/modes or of "other properties" ?
 
       The \textbf{average} of $\lambda$ is: 
           \begin{equation}
@@ -284,12 +282,8 @@ Sherbrooke, Canada\\
 
       \subsubsection*{Trait-matching function} 
 
-          % [Tomas adds: This is a bit of a stump]
-%DG: I tried to expand just a little, but I don't want to get lost in this paragraph as it would be a distraction. We should basically mention it as a possibility.
-
           As a fourth and final approach to obtain the prior distribution of $\lambda$, we envisage using the outcome of a trait-matching model, provided such a model has been documented using external data and relevant traits are available. In such as case, the prior distribution would follow the function $P(\lambda|\mathbf{T})=f(\mathbf{T})$ based on a set of traits for both species $\mathbf{T}$. There are several techniques available to perform this inference of interaction probability, some of which are Bayesian, and we refer to~\citet{Bartomeus2016} and~\citet{Weinstein2017} for recent reviews about this topic. Note that in this case the prior might not be beta-distributed and numerical methods might be required to compute the posterior distribution.  
 
-%DG: I want to be sure that the following example is clear and understandable for everyone. Tomas, Kate, both of you can follow the entire logic ? Would you be able to reproduce it using the R code ? 
 
 \section*{A quantitative example}
 
@@ -333,20 +327,24 @@ Sherbrooke, Canada\\
 
 %DG: I dropped pieces of the above paragraph because it was bizarre to get back at the posterior distribution, and then to the computer simulations. This section is first and foremost an empirical example. But then, an introduction about the scaling up was missing, so I moved part of the paragraph below
 
+% AC : Maybe we should change the section title to highlight that this is an empirical example and covers the effect of uncertainty on network-level properties
+
   \subsection*{Computing the posterior distribution}
 
-      In a strict Bayesian framework, we wish to use a prior distribution that does not rely on any information from the study at hand. To that end, we use data from another well-described system of \emph{Salix}, gallers, and natural enemies~\citep{Barbour2016,Barbour2016Dryad}. We note that this study used several genotypes of \emph{Salix hookeriana} rather than different \emph{Salix} species, but stress that this difference is unlikely to be critical for our purposes. Our interest is specifically in what information can be gained from the extensive sampling of \emph{Salix}, gallers, and natural enemies across Europe; the similar but much smaller system in the United States is merely a starting point from which to obtain somewhat reasonable priors. As the \emph{Salix}-galler component of~\citet{Barbour2016}'s study is quite different from that in~\citet{Kopelke2017}, we repeated our analyses using two subnetworks from the middle of the geographical distribution of the~\citet{Kopelke2017} dataset (Zillis and Zillertal sites) as priors. This is analogous to using the first sample as ``training data" with which to guide future sampling. To obtain the priors based on~\citet{Barbour2016}, we estimated frequencies of  \emph{S. hookeriana} genotype-galler interactions based on the normalised degree of each node (species or genotype) in each network component (see \emph{Appendix S3} for details and code). Specifically, we obtained prior parameters $\alpha$=2.51 and $\beta$=1.89. For the galler-natural enemy component of the network, the corresponding prior parameters were $\alpha$=1.34, $\beta$=9.49. We followed the same procedure to obtain priors based on~\citet{Kopelke2017} except that we used the normalised degree of each species in each network component. For the \emph{Salix}-galler component of the network, we obtained prior parameters of $\alpha$=8.72, $\beta$=305 and $\alpha$=6.73, $\beta$=101 for the Zillis and Zillertal subwebs, respectively. For the galler-natural enemy component, we obtained prior parameters of $\alpha$=0.700, $\beta$=8.49 and $\alpha$=1.64, $\beta$=11.2 for the Zillis and Zillertal subwebs, respectively. Note that the priors obtained for the \emph{Salix}-galler component of the network differ greatly depending on whether data from~\citet{Barbour2016} or~\citet{Kopelke2017} were used while priors for the galler-natural enemy component were relatively similar. After calculating these prior parameters, we were then able to estimate the posterior distribution of interaction probabilities given the additional information in our dataset.
+      In a strict Bayesian framework, we wish to use a prior distribution that does not rely on any information from the study at hand. Network data for a similar study system may, however, not be available. In that case, one might use the first subnetwork collected as ``training data" to guide future sampling. To simulate this situation, we created priors using a single subnetwork from the middle of the geographical distribution of the~\citep{Kopelke2017} dataset (Zillis subweb). To demonstrate how the use of a data from a different system can affect the prior distribution and conclusions based on it, we repeated our analyses using priors derived from a much smaller \emph{Salix}-galler-natural enemy system~\citep{Barbour2016,Barbour2016Dryad}. This smaller system was much more densely-connected than that described in~\citet{Kopelke2017} and provided unreasonable distributions for interaction probabilities (\emph{Appendix SX}). 
+
+
+      To obtain the priors based on the Zillis subweb, we estimated frequencies of \emph{Salix}-galler interactions based on the normalised degree of each species in each network component (see \emph{Appendix S3} for details and code). Specifically, we obtained prior parameters of $\alpha$=8.72, $\beta$=305 for the \emph{Salix}-galler component and $\alpha$=0.700, $\beta$=8.49 for the galler-natural enemy components of the network. After calculating these prior parameters, we were then able to estimate the posterior distribution of interaction probabilities given the additional information in our dataset.
   
 
-      For species where no co-occurrences were observed ($n=0$), we can calculate the estimates for the mean and variance of $\lambda_{ij}$ directly from the prior parameters following equations~\ref{mean} and~\ref{variance} (see \emph{Appendix S1} for R implementation). For the \emph{Salix}-galler network, the prior distribution we obtained based on~\citet{Barbour2016} was: $\bar\lambda$=0.570, var($\lambda$)=0.056. The prior distributions based on~\citet{Kopelke2017} were $\bar\lambda$=0.028, var($\lambda$)=8.60$\times$10$^{-5}$ and $\bar\lambda$=0.062, var($\lambda$)=5.43$\times$10$^{-4}$ for the Zillis and Zillertal subwebs, respectively. The prior distribution for the galler-natural enemy network based on~\citet{Barbour2016} was $\bar\lambda$=0.124, var($\lambda$)=0.010. Prior distributions based on~\citet{Kopelke2017} were $\bar\lambda$=0.076, var($\lambda$)=0.008 and $\bar\lambda$=0.127, var($\lambda$)=0.009 for the Zillis and Zillertal subwebs, respectively. The posterior interaction probabilities obtained based on~\citet{Barbour206} are much higher than those obtained based on~\citet{Kopelke2017}, especially for the \emph{Salix}-galler component of the network. This likely reflects the differences in scale between the network containing different genotypes of a single \emph{Salix} species and four gallers from a single family in~\citet{Barbour2016} and the more extensive networks in~\citet{Kopelke2017}. The prior distributions calculated from subwebs in~\citet{Kopelke2017} are more likely to reflect the sparsely-connected meta-network than is a distribution calculated from the smaller and denser network in~\citet{Barbour2016}. This emphasises the importance of using an appropriate study system when constructing a prior.
+      For species where no co-occurrences were observed ($n=0$), we can calculate the estimates for the mean and variance of $\lambda_{ij}$ directly from the prior parameters following equations~\ref{mean} and~\ref{variance} (see \emph{Appendix S1} for R implementation). For the \emph{Salix}-galler network, the prior distribution  was: $\bar\lambda$=0.028, var($\lambda$)=8.60$\times$10$^{-5}$. The prior distribution for the galler-natural enemy network was: $\bar\lambda$=0.076, var($\lambda$)=0.008. The posterior interaction probabilities obtained based on the Zillis subweb were much lower than those obtained based on~\citet{Barbour2016}; this emphasises the importance of using an appropriate study system when constructing a prior (\emph{Appendix SX}).
 
 
-      For a pair of species with some observed co-occurrences ($n>0$), we can update the prior distribution with these data. If we consider only pairs of species which were observed to co-occur but not to interact, $k_{ij}$ is always 0 and only $n_{ij}$ will vary between species pairs, giving $\alpha'$=$\alpha$ and $\beta'$=$\beta + n_{ij}$. As the most extreme case, consider a pair of species which co-occurred at all 374 sites and was never observed to interact. Using the prior derived from~\citet{Barbour2016}, our distributions would become 
-      $\bar\lambda_{ij}$=6.63 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=1.74 $\times$ 10$^{-5}$ for the \emph{Salix}-galler network and 
-      $\bar\lambda_{ij}$=3.49 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=9.03 $\times$ 10$^{-6}$ for the galler-natural enemy network. Using the priors derived from~\citet{Kopelke2017}, our distributions for the \emph{Salix}-galler network would become $\bar\lambda_{ij}$=1.27 $\times$ 10$^{-2}$, var($\lambda_{ij}$)=1.82 $\times$ 10$^{-5}$ and $\bar\lambda_{ij}$=1.40 $\times$ 10$^{-2}$, var($\lambda_{ij}$)=2.86 $\times$ 10$^{-5}$ for the Zillis and Zillertal subwebs, respectively. Our distributions for the galler-natural enemy network would become $\bar\lambda_{ij}$=1.83 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=4.76 $\times$ 10$^{-6}$ and $\bar\lambda_{ij}$=4.23 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=1.09 $\times$ 10$^{-5}$ for the Zillis and Zillertal subwebs. Distributions for both network components were very close to 0 with small variance about our estimate of $\lambda$; species $i$ and $j$ are extremely unlikely to interact at sites or times not included in our sample.
+      For a pair of species with some observed co-occurrences ($n>0$), we can update the prior distribution with these data. If we consider only pairs of species which were observed to co-occur but not to interact, $k_{ij}$ is always 0 and only $n_{ij}$ will vary between species pairs, giving $\alpha'$=$\alpha$ and $\beta'$=$\beta + n_{ij}$. As the most extreme case, consider a pair of species which co-occurred at all 374 sites and was never observed to interact. Using the priors described above, our distribution for the \emph{Salix}-galler network would become $\bar\lambda_{ij}$=1.27 $\times$ 10$^{-2}$, var($\lambda_{ij}$)=1.82 $\times$ 10$^{-5}$ while our distribution for the galler-natural enemy network would become $\bar\lambda_{ij}$=1.83 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=4.76. Distributions for both network components were very close to 0 with small variance about our estimate of $\lambda$; species $i$ and $j$ are extremely unlikely to interact at sites or times not included in our sample.
 
 
-      For most pairs of species $i$ and $j$, however, $n_{ij}$ was much less than 374 and our posterior mean and variance therefore retain more of the influence of the prior. We can see this in the increasing means and variances as we decrease $n_{ij}$ (Fig.~\ref{Salix_pdfs}). Using the priors derived from~\citet{Barbour2016}, the 95\% credible interval around the estimate of $\lambda$ also widens as $n_{ij}$ decreases from (0.001, 0.017) and (\textless0.001, 0.11) for hypothetical \emph{Salix}-galler and galler-natural enemy pairs that might be observed co-occurring at all 374 sites without any observed interaction to (0.152,0.931) and (0.008, 0.364) for \emph{Salix}-galler and galler-natural enemy pairs that were never observed co-occurring. The priors derived from~\citet{Kopelke} gave intervals that were closer to 0, widening from (0.006, 0.022) and (0.006, 0.026) to (0.013, 0.049) and (0.025, 0.115) for the \emph{Salix}-galler network and widening from (0.00001, 0.008) and (0.0004, 0.013) to (0.0005, 0.304) and (0.012, 0.348) for the galler-natural enemy network.
+      For most pairs of species $i$ and $j$, however, $n_{ij}$ was much less than 374 and our posterior mean and variance therefore retain more of the influence of the prior. We can see this in the increasing means and variances as we decrease $n_{ij}$ (Fig.~\ref{Salix_pdfs}). The change in distribution as $n_{ij}$ decreases can also be shown  by calculating 95\% credible intervals for $\lambda$ (see the function ``credible\_interval" in \emph{Appendix S2}). The 95\% credible interval around the estimate of $\lambda$ also widens as $n_{ij}$ decreases from (0.001, 0.017) and (\textless0.001, 0.11) for hypothetical \emph{Salix}-galler and galler-natural enemy pairs that might be observed co-occurring at all 374 sites without any observed interaction to (0.152,0.931) and (0.008, 0.364) for \emph{Salix}-galler and galler-natural enemy pairs that were never observed co-occurring. The 95\% credible interval for hypothetical \emph{Salix}-galler pairs widened from (0.006, 0.022) if the pair co-occurred at all sites to (0.013, 0.049) if they co-occurred at none. The 95\% credible interval for hypothetical galler-natural enemy pairs, meanwhile, widened from (0.00001, 0.008) to (0.0005, 0.304).
+
 
 % %DG: the following subsection could be moved to the appendix if we need to cut down
 % Add to appendix. 
@@ -394,11 +392,18 @@ Sherbrooke, Canada\\
 
   \subsection*{How many samples are required to reach a minimal precision}
 
-      Rather than calculating credible intervals for a posterior distribution after collecting data, we may wish to know how many data points are necessary to obtain a given level of confidence that two co-occurring species do not interact. The number of samples needed will depend on both our desired level of confidence and the threshold below which we assume that two species are unlikely to ever interact. If we want to be 95\% confident that the interaction probability for two species in the \emph{Salix}-galler network is below 0.1, 0.05, or 0.01, we would need 51, 106, and 550 observed co-occurrences with no observed interaction, respectively (Fig.~\ref{Salix_cdfs}; see function samples\_for\_threshold in~\emph{Appendix S1}). Although the prior distribution of interaction probabilities is narrower and closer to zero for the galler-natural enemy network, the number of samples required to be 95\% confident that the interaction probability is below a threshold still increases quickly; we would need 25, 62, and 352 observed co-occurrence with no observed interaction for threshold interaction probabilities of 0.1, 0.05, and 0.01, respectively. Given the low levels of replication in most network studies, this implies that we should have fairly low confidence in many ``non-interacting" pairs of species. Even in the extensively replicated \emph{Salix}-galler-natural enemy dataset very few species pairs were observed co-occurring frequently enough to reach these thresholds. In fact, only three \emph{Salix}-galler pairs and 31 pairs of gallers and their natural enemies were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.1. No pairs were observed to co-occur frequently enough to reach the threshold for an interaction probability of 0.01. Discounting potential interactions, then, requires either a stronger prior expectation of no interaction (e.g. for forbidden interactions) or very extensive sampling. For all we know, most links absent from current descriptions of network structure may be so not because the species do not interact, but because we have not sampled deeply enough to detect them.
+
+      Rather than calculating credible intervals for a posterior distribution after collecting data, we may wish to know how many data points are necessary to obtain a given level of confidence that two co-occurring species do not interact. The number of samples needed will depend on both our desired level of confidence and the threshold below which we assume that two species are unlikely to ever interact (Fig.~\ref{Salix_cdfs}; see function samples\_for\_threshold in~\emph{Appendix S1}). In our dataset, the entire 95\% credible interval was (0.013, 0.049). We may therefore be 95\% confident that the interaction probability for \emph{Salix} and galler species that have not been observed cooccurring is below 0.05. To be 95\% confident that the interaction probability for these species is below 0.01 would require 139 observed co-occurrences with no interaction.
+
+
+      The number of samples required to be 95\% confident that the interaction probability between galler and natural enemy species is below a threshold also increases quickly as the threshold decreasesy. The 95\% credible interval is (0.0005, 0.303) for the probability of interaction between two species observed to co-occur but never interact. To be 95\% confident that the probability of interaction is below 0.1, 0.05, or 0.001 would require 15, 39, and 229 observed co-occurrances, respectively.
+
+
+      Given the low levels of replication in most network studies, this implies that we should have fairly low confidence in many ``non-interacting" pairs of species. Even in the extensively replicated \emph{Salix}-galler-natural enemy dataset very few species pairs were observed co-occurring frequently enough to reach these thresholds.  Regardless of our choice of prior, no species pairs were observed to co-occur frequently enough to reach the threshold for an interaction probability of 0.01. Discounting potential interactions, then, requires either a stronger prior expectation of no interaction (e.g. for forbidden interactions) or very extensive sampling. For all we know, most links absent from current descriptions of network structure may be so not because the species do not interact, but because we have not sampled deeply enough to detect them.
 
 
   \subsection*{Scaling up to network metrics}
-
+  [[Haven't added NODF or checked this yet.]]
 
   %DG: here is where I moved material from aboce 
 
@@ -528,6 +533,12 @@ Sherbrooke, Canada\\
     \caption{Here we show the mean connectance, links per resource (\emph{Salix} in the \emph{Salix}-galler networks and gallers in the galler-natural enemy networks), and links per consumer for networks assembled using posterior distributions based on a smaller, North American \emph{Salix}-galler-natural enemy system~\citep{Barbour2016,Barbour2016Dryad}. We created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``detection-filter" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean network property (e.g., connectance) obtained from a set of 100 detection-filter networks, plotted against the value of the network property in the posterior-sampling network used to create the detection-filter networks. For each property and both network types, the posterior-sampling networks cover a relatively small range of network properties than the range covered by networks with varying detection probabilities. The value of each property decreases with the proportion of links included in the detection-filter networks.}
     \label{posterior_webs}    
     \includegraphics[width=.8\textwidth]{Figures/Salix_Galler_posterior_properties.eps}
+    \end{figure}
+
+    \begin{figure}[ht]
+    \caption{Here we show the mean connectance, links per resource (\emph{Salix} in the \emph{Salix}-galler networks and gallers in the galler-natural enemy networks), and links per consumer for networks assembled using posterior distributions based on a single subweb in the~\citet{Kopelke2017} dataset (Zillis). We created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``detection-filter" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean network property (e.g., connectance) obtained from a set of 100 detection-filter networks, plotted against the value of the network property in the posterior-sampling network used to create the detection-filter networks. For each property and both network types, the posterior-sampling networks cover a relatively small range of network properties than the range covered by networks with varying detection probabilities. The value of each property decreases with the proportion of links included in the detection-filter networks.}
+    \label{posterior_webs}    
+    \includegraphics[width=.8\textwidth]{Figures/Salix_Galler_posterior_properties_Zillis.eps}
     \end{figure}
 
   % [[What if we have only one site? Can we use the number of observations of a pair of species interacting with any partners as the number of times they co-occur, and the number of interactions within the pair as k? This will be sort-of valid for insects but not for plants when researchers camp out by plant individuals... ]]
